WIP updator